14684. Fix nodata assignment, fix incorrect coloring

--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -100,13 +100,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_CLASSES = 6\n",
+    "NUM_CLASSES = 7\n",
+    "nodata = 0\n",
     "mask = mask.astype(bool)\n",
     "scaled = img.astype(np.float32) / NUM_CLASSES\n",
     "scaled = (plt.cm.jet(scaled)[:,:,:-1] * 255)\n",
-    "scaled[mask[:,:,np.newaxis] & (scaled==0)] +=1\n",
-    "scaled = scaled.astype(np.uint8)\n",
-    "scaled[~mask] = 0"
+    "scaled[mask[:,:,np.newaxis] & (scaled==0)] += 1\n",
+    "scaled = np.clip(scaled, 0, 255).astype(np.uint8)\n",
+    "# Set pixels with invalid pixels to new nodata value\n",
+    "scaled[~mask] = nodata\n",
+    "# Set pixels with background class(0) to new nodata value\n",
+    "scaled[img==0] = nodata"
    ]
   },
   {
@@ -126,6 +130,7 @@
     "\n",
     "profile.update(\n",
     "    count=3,\n",
+    "    nodata=nodata,\n",
     "    compress='lzw'\n",
     ")\n",
     "colored_tif = os.path.join(prediction_dir, \"colored_prediction.tif\")\n",
