14691: add name metadata for tif to tci_ndvi notebook

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -644,9 +644,9 @@
     "        transformed_poly = to_crs(polygon, tile_crs)\n",
     "        \n",
     "        # Crop and save NDVI\n",
-    "        crop(temp_ndvi_filename, temp_ndvi_filename, transformed_poly, acquired_date, REQUEST_ID)\n",
+    "        crop(temp_ndvi_filename, temp_ndvi_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"NDVI Vegetation Index\")\n",
     "        # Crop and save TCI\n",
-    "        crop(paths['TCI'], temp_tci_filename, transformed_poly, acquired_date, REQUEST_ID)\n",
+    "        crop(paths['TCI'], temp_tci_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"True Color Image\")\n",
     "        \n",
     "        print(f\"{tile}: End calculation TCI, NDVI\")\n",
     "    \n",
