--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AOI = 'POLYGON ((-85.95552469759967 40.59907889076951, -85.8719838031499 39.71944241391614, -84.68029751467536 39.69732864773826, -84.7011827382878 40.61013577385845, -85.95552469759967 40.59907889076951))'\n",
-    "START_DATE = \"2020-05-01\"\n",
-    "END_DATE = \"2020-08-30\""
+    "AOI = 'POLYGON ((-85.483932 40.367801, -85.64349199999999 40.367801, -85.64349199999999 40.226597, -85.483932 40.226597, -85.483932 40.367801))'\n",
+    "START_DATE = '2019-05-01'\n",
+    "END_DATE = '2019-08-30'"
    ]
   },
   {
@@ -39,7 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user = os.getenv('NB_USER')"
+    "user = os.getenv('NB_USER')\n",
+    "name = 'croptype'"
    ]
   },
   {
@@ -137,7 +138,8 @@
     "with rasterio.open(colored_tif, 'w', **profile) as dst:\n",
     "    dst.update_tags(start_date=START_DATE, \n",
     "                    end_date=END_DATE, \n",
-    "                    request_id=REQUEST_ID)\n",
+    "                    request_id=REQUEST_ID,\n",
+    "                    name=name)\n",
     "    for i in range(scaled.shape[-1]):\n",
     "        dst.write(scaled[:,:,i], indexes=i+1)"
    ]
