14718. Change user and name variables to uppercase

--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -39,8 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user = os.getenv('NB_USER')\n",
-    "name = 'croptype'"
+    "USER = os.getenv('NB_USER')\n",
+    "NAME = 'croptype'"
    ]
   },
   {
@@ -64,7 +64,7 @@
    },
    "outputs": [],
    "source": [
-    "CONFIG_PATH = f\"/home/{user}/work/notebooks/pw/code/prediction_pipeline/config.yml\"\n",
+    "CONFIG_PATH = f\"/home/{USER}/work/notebooks/pw/code/prediction_pipeline/config.yml\"\n",
     "prediction_file = run(CONFIG_PATH, aoi_filename, start_date, end_date)\n",
     "os.remove(aoi_filename)"
    ]
@@ -139,7 +139,7 @@
     "    dst.update_tags(start_date=START_DATE, \n",
     "                    end_date=END_DATE, \n",
     "                    request_id=REQUEST_ID,\n",
-    "                    name=name)\n",
+    "                    name=NAME)\n",
     "    for i in range(scaled.shape[-1]):\n",
     "        dst.write(scaled[:,:,i], indexes=i+1)"
    ]
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESULTS_DIR = f\"/home/{user}/work/results/pw/\"\n",
+    "RESULTS_DIR = f\"/home/{USER}/work/results/pw/\"\n",
     "result_name = f\"{REQUEST_ID}_{START_DATE}_{END_DATE}.tif\"\n",
     "os.makedirs(RESULTS_DIR, exist_ok=True)\n",
     "dst_file = os.path.join(RESULTS_DIR, result_name)\n",
