14718. Add name tag to resulting raster (#106)
* 14718. Add name tag to resulting raster

* 14718. Change user and name variables to uppercase

--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AOI = 'POLYGON ((-85.95552469759967 40.59907889076951, -85.8719838031499 39.71944241391614, -84.68029751467536 39.69732864773826, -84.7011827382878 40.61013577385845, -85.95552469759967 40.59907889076951))'\n",
-    "START_DATE = \"2020-05-01\"\n",
-    "END_DATE = \"2020-08-30\""
+    "AOI = 'POLYGON ((-85.483932 40.367801, -85.64349199999999 40.367801, -85.64349199999999 40.226597, -85.483932 40.226597, -85.483932 40.367801))'\n",
+    "START_DATE = '2019-05-01'\n",
+    "END_DATE = '2019-08-30'"
    ]
   },
   {
@@ -39,7 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user = os.getenv('NB_USER')"
+    "USER = os.getenv('NB_USER')\n",
+    "NAME = 'croptype'"
    ]
   },
   {
@@ -63,7 +64,7 @@
    },
    "outputs": [],
    "source": [
-    "CONFIG_PATH = f\"/home/{user}/work/notebooks/pw/code/prediction_pipeline/config.yml\"\n",
+    "CONFIG_PATH = f\"/home/{USER}/work/notebooks/pw/code/prediction_pipeline/config.yml\"\n",
     "prediction_file = run(CONFIG_PATH, aoi_filename, start_date, end_date)\n",
     "os.remove(aoi_filename)"
    ]
@@ -137,7 +138,8 @@
     "with rasterio.open(colored_tif, 'w', **profile) as dst:\n",
     "    dst.update_tags(start_date=START_DATE, \n",
     "                    end_date=END_DATE, \n",
-    "                    request_id=REQUEST_ID)\n",
+    "                    request_id=REQUEST_ID,\n",
+    "                    name=NAME)\n",
     "    for i in range(scaled.shape[-1]):\n",
     "        dst.write(scaled[:,:,i], indexes=i+1)"
    ]
@@ -148,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESULTS_DIR = f\"/home/{user}/work/results/pw/\"\n",
+    "RESULTS_DIR = f\"/home/{USER}/work/results/pw/\"\n",
     "result_name = f\"{REQUEST_ID}_{START_DATE}_{END_DATE}.tif\"\n",
     "os.makedirs(RESULTS_DIR, exist_ok=True)\n",
     "dst_file = os.path.join(RESULTS_DIR, result_name)\n",
