14667. Update notebook and submodule

--- a/data/notebooks/pbdnn/PBDNN_inference.ipynb
+++ b/data/notebooks/pbdnn/PBDNN_inference.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "AOI = 'POLYGON ((29.93584944158209 48.49763260054361, 29.92222752138016 48.19522597206074, 29.59257705249343 48.20884789226267, 29.60347458865497 48.51670328882631, 29.93584944158209 48.49763260054361))'\n",
     "START_DATE = \"2020-05-01\"\n",
-    "END_DATE = \"2020-06-30\"\n",
-    "REQUEST_ID = 6"
+    "END_DATE = \"2020-06-30\""
    ]
   },
   {
@@ -49,11 +48,11 @@
     "import yaml\n",
     "\n",
     "from sentinel2download.downloader import Sentinel2Downloader\n",
-    "from sip_plot_boundary_detection_nn.code.preprocessing import (\n",
+    "from code.preprocessing import (\n",
     "    preprocess_sentinel_raw_data, read_raster, extract_tci)\n",
-    "from sip_plot_boundary_detection_nn.code.engine import *\n",
-    "from sip_plot_boundary_detection_nn.code.dataset import BoundaryDetector\n",
-    "from sip_plot_boundary_detection_nn.code.filter_polygons import filter_polygons\n",
+    "from code.engine import *\n",
+    "from code.dataset import BoundaryDetector\n",
+    "from code.filter_polygons import filter_polygons\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -163,9 +162,7 @@
     "    if not os.path.exists(directory):\n",
     "        os.makedirs(directory)\n",
     "        \n",
-    "    save_path = save_path + \".temp\" \n",
     "    gdf.to_file(save_path, driver='GeoJSON')\n",
-    "    os.rename(save_path, save_path[:-5])\n",
     "    \n",
     "    return gdf"
    ]
@@ -196,7 +193,7 @@
     "PBD_DIR = os.path.join(BASE, \"notebooks/pbdnn\")\n",
     "\n",
     "BANDS = {'TCI'}\n",
-    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 15.0, 'CLOUDY_PIXEL_PERCENTAGE': 40.0, }\n",
+    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 15.0, 'CLOUDY_PIXEL_PERCENTAGE': 15.0, }\n",
     "PRODUCT_TYPE = 'L2A'"
    ]
   },
@@ -375,12 +372,9 @@
    "outputs": [],
    "source": [
     "# Credit for baseline: work/notebooks/pw/raster_predict.ipynb\n",
-    "def create_style(class_):\n",
-    "    colors = dict(boundary='#e80e27')\n",
-    "    \n",
-    "    style = dict(color=colors.get(class_.lower(), '#C0C0C0'),\n",
-    "                stroke='#e80e27')\n",
-    "    style['stroke-width'] = 2\n",
+    "def create_style():\n",
+    "    style = {'color': '#C0C0C0', 'stroke': 'e80e27', 'stroke-width': 2}\n",
+    "\n",
     "    return str(style)"
    ]
   },
@@ -390,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentinel_tiles_path = \"sentinel2grid.geojson\"\n",
+    "sentinel_tiles_path = \"../sentinel2grid.geojson\"\n",
     "model = make_unet_plusplus()\n",
     "config['device'] = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
@@ -472,6 +466,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Running boundary detection and filtration of predictions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -518,16 +519,17 @@
     "    df = pd.DataFrame({\"geometry\": polys.geometry}).reset_index()\n",
     "    df[\"id\"] = pd.Series(map(lambda x: f\"{origin_name}_{tile.tileID}_{x}\", df.index.values))\n",
     "    df[\"tileID\"] = tile.tileID\n",
-    "    df[\"start_date\"] = START_DATE\n",
-    "    df[\"end_date\"] = END_DATE\n",
     "\n",
     "    result_df = pd.concat([result_df, df])\n",
     "\n",
-    "gdf = process_polygons(result_df, filters.crs)\n",
-    "gdf['class_'] = 'boundary'\n",
-    "gdf['style'] = gdf.class_.apply(lambda cl: create_style(cl))\n",
-    "save_path = os.path.join(RESULTS_DIR, f\"{origin_name}_prediction.geojson\")\n",
-    "save_polygons(gdf, save_path)"
+    "gdf = process_polygons(result_df, filters.crs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving polygons into results folder and adding metadata"
    ]
   },
   {
@@ -535,7 +537,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "\n",
+    "tmp_suffix = \".temp\"\n",
+    "gdf['style'] = create_style()\n",
+    "save_path = os.path.join(RESULTS_DIR, f\"{REQUEST_ID}_{START_DATE}_{END_DATE}.geojson{tmp_suffix}\")\n",
+    "save_polygons(gdf, save_path)\n",
+    "\n",
+    "try:\n",
+    "    with open(save_path) as f:\n",
+    "        geoms = json.load(f)\n",
+    "except Exception:\n",
+    "    geoms = {}\n",
+    "    \n",
+    "geoms['end_date'] = END_DATE\n",
+    "geoms['start_date'] = START_DATE\n",
+    "geoms['name'] = 'boundary'\n",
+    "geoms['request_id'] = REQUEST_ID\n",
+    "\n",
+    "with open(save_path, 'w') as f:\n",
+    "    json.dump(geoms, f)\n",
+    "os.rename(save_path, save_path[:-5])"
+   ]
   }
  ],
  "metadata": {
@@ -554,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
