Updated commits with notebook bug fixes

--- a/data/notebooks/pbdnn/PBDNN_inference.ipynb
+++ b/data/notebooks/pbdnn/PBDNN_inference.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AOI = 'POLYGON ((29.93584944158209 48.49763260054361, 29.92222752138016 48.19522597206074, 29.59257705249343 48.20884789226267, 29.60347458865497 48.51670328882631, 29.93584944158209 48.49763260054361))'\n",
+    "AOI = 'POLYGON ((30.2759366834769 48.51505083641415, 30.61727452548106 48.45927941996875, 30.64285389693346 48.5330821966183, 30.30277405680401 48.58843427910546, 30.2759366834769 48.51505083641415))'\n",
     "START_DATE = \"2020-05-01\"\n",
     "END_DATE = \"2020-06-30\""
    ]
@@ -48,11 +48,11 @@
     "import yaml\n",
     "\n",
     "from sentinel2download.downloader import Sentinel2Downloader\n",
-    "from code.preprocessing import (\n",
+    "from sip_plot_boundary_detection_nn.code.preprocessing import (\n",
     "    preprocess_sentinel_raw_data, read_raster, extract_tci)\n",
-    "from code.engine import *\n",
-    "from code.dataset import BoundaryDetector\n",
-    "from code.filter_polygons import filter_polygons\n",
+    "from sip_plot_boundary_detection_nn.code.engine import *\n",
+    "from sip_plot_boundary_detection_nn.code.dataset import BoundaryDetector\n",
+    "from sip_plot_boundary_detection_nn.code.filter_polygons import filter_polygons\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -203,17 +203,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(BASE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "local = False\n",
-    "if local:\n",
-    "    ukr_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/ukr_shapes/custom.geo.json\")\n",
+    "#if local:\n",
+    "ukr_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/ukr_shapes/custom.geo.json\")\n",
+    "if os.path.exists(ukr_shapefile):\n",
     "    usa_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/custom.geo.json\")\n",
     "    config_file = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/code/config.yaml\")\n",
     "    API_KEY = os.path.join(BASE, \"data/notebooks/pbdnn/sentinel2_google_api_key.json\")\n",
     "    PBD_DIR = os.path.join(BASE, \"data/notebooks/pbdnn\")\n",
+    "    sentinel_tiles_path = os.path.join(BASE, \"data/notebooks/pbdnn/sentinel2grid.geojson\")\n",
+    "    local = True\n",
     "else:\n",
     "    ukr_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/ukr_shapes/custom.geo.json\")\n",
     "    usa_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/custom.geo.json\")\n",
     "    config_file = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/code/config.yaml\")\n",
+    "    sentinel_tiles_path = os.path.join(BASE, \"notebooks/pbdnn/sentinel2grid.geojson\")\n",
+    "    local = False\n",
     "\n",
     "with open(config_file) as f:\n",
     "    config = yaml.safe_load(f)"
@@ -356,6 +370,7 @@
     "                                 output_dir=output_dir,                       \n",
     "                                 bands=BANDS,\n",
     "                                constraints=CONSTRAINTS)\n",
+    "        print(f'{tile} loaded')\n",
     "        \n",
     "        loadings[tile] = loaded\n",
     "    \n",
@@ -384,7 +399,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentinel_tiles_path = \"../sentinel2grid.geojson\"\n",
     "model = make_unet_plusplus()\n",
     "config['device'] = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
@@ -401,6 +415,8 @@
     "    model.load_state_dict(torch.load(\n",
     "        config['model_weights_path'],map_location=torch.device('cpu')))\n",
     "    \n",
+    "print('model loaded')\n",
+    "    \n",
     "date_tile_info = get_tiles(aoi_filename, sentinel_tiles_path)\n",
     "loadings = load_images(API_KEY, date_tile_info.tileID.values, START_DATE, END_DATE, LOAD_DIR, PRODUCT_TYPE)\n",
     "checked = check_nodata(loadings, PRODUCT_TYPE)\n",
@@ -408,7 +424,10 @@
     "    \n",
     "origin_name = os.path.basename(aoi_filename).replace(\".geojson\", \"\")\n",
     "\n",
-    "detector = BoundaryDetector(model, tiles_dir=f'/home/{NB_USER}/work/satellite_imagery')"
+    "print(f'total tiles: {len(loadings)}')\n",
+    "\n",
+    "detector = BoundaryDetector(model, tiles_dir=f'/home/{NB_USER}/work/satellite_imagery')\n",
+    "print('Detector is ready')"
    ]
   },
   {
@@ -426,7 +445,8 @@
     "    if 'ukr_non_agriculture' in filter_path:\n",
     "        filters['geometry'] = filters.buffer(0)\n",
     "            \n",
-    "    filters = filters[filters.intersects(aoi.geometry.values[0])]"
+    "    filters = filters[filters.intersects(aoi.geometry.values[0])]\n",
+    "    print('filters are loaded')"
    ]
   },
   {
@@ -454,7 +474,11 @@
     "                 \"transform\": transform,\n",
     "                 \"crs\": crs})\n",
     "    \n",
-    "    out_raster_path = out_raster_path.replace('.jp2', '.tif')\n",
+    "    if '.jp2' in out_raster_path:\n",
+    "        out_raster_path = out_raster_path.replace('.jp2', '_merged.tif')\n",
+    "    else:\n",
+    "        out_raster_path = out_raster_path.replace('.tif', '_merged.tif')\n",
+    "    print(f'saved raster {out_raster_path}')\n",
     "\n",
     "    for t in tiles:\n",
     "        t.close()\n",
@@ -478,51 +502,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with tempfile.TemporaryDirectory(dir=PBD_DIR) as tmpdirname:\n",
-    "    rasters = []\n",
-    "    for i, tile in date_tile_info.iterrows():\n",
-    "        try:\n",
-    "            tile_folder = Path(filtered[tile.tileID])\n",
-    "        except Exception as ex:\n",
-    "            continue\n",
-    "\n",
-    "        full_tile = [os.path.join(tile_folder, x) for x in os.listdir(tile_folder) if x.endswith('.jp2')]\n",
-    "        rasters.append(full_tile[0])\n",
-    "        \n",
-    "    if len(rasters)>1:\n",
-    "        raster_path = stitch_tiles(rasters)\n",
-    "    elif len(rasters)==0:\n",
-    "        raster_path = rasters[0]\n",
-    "            \n",
-    "    out_raster = raster_path.replace('.tif', '_prediction.tif')\n",
-    "    out_geom = aoi_filename.replace('_aoi.', '_prediction.')\n",
-    "        \n",
-    "    start_raster = time.time()\n",
-    "    pred_tif_path = detector.raster_prediction(in_raster_path=raster_path,\n",
-    "                                                out_raster_path=out_raster,\n",
-    "                                                aoi_path=aoi_filename,\n",
-    "                                                conf_thresh=0.25)\n",
-    "        \n",
-    "    start_poly = time.time()\n",
-    "    polygons = detector.process_raster_predictions(pred_tif_path,\n",
-    "                                                    shapes_path=out_geom,\n",
-    "                                                    aoi_path=aoi_filename, \n",
-    "                                                    conf_thresh=0.25)\n",
-    "    polygons = gpd.GeoDataFrame(polygons)\n",
-    "\n",
+    "rasters = []\n",
+    "for i, tile in date_tile_info.iterrows():\n",
     "    try:\n",
-    "        polys = filter_polygons(polygons, filters)\n",
-    "    except Exception:\n",
-    "        filters['geometry'] = filters.buffer(0)\n",
-    "        polys = filter_polygons(polygons, filters)\n",
-    "            \n",
-    "    df = pd.DataFrame({\"geometry\": polys.geometry}).reset_index()\n",
-    "    df[\"id\"] = pd.Series(map(lambda x: f\"{origin_name}_{tile.tileID}_{x}\", df.index.values))\n",
-    "    df[\"tileID\"] = tile.tileID\n",
-    "\n",
-    "    result_df = pd.concat([result_df, df])\n",
-    "\n",
-    "gdf = process_polygons(result_df, filters.crs)"
+    "        tile_folder = Path(filtered[tile.tileID])\n",
+    "        print(f'filtered: {tile_folder}')\n",
+    "    except Exception as ex:\n",
+    "        print(ex)\n",
+    "        continue\n",
+    "        \n",
+    "    full_tile = [os.path.join(tile_folder, x) for x in os.listdir(tile_folder) if x.endswith('.jp2')]\n",
+    "    rasters.append(full_tile[0])\n",
+    "        \n",
+    "print(f'rasters to be processed: {rasters}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if len(rasters)>1:\n",
+    "    raster_path = stitch_tiles(rasters)\n",
+    "elif len(rasters)==1:\n",
+    "    raster_path = rasters[0]\n",
+    "elif len(rasters)==0:\n",
+    "    print('WARNING: no rasters were found!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if '.jp2' in raster_path:\n",
+    "    out_raster = raster_path.replace('.jp2', '_prediction.tif')\n",
+    "else:\n",
+    "    out_raster = raster_path.replace('.tif', '_prediction.tif')\n",
+    "    \n",
+    "out_geom = aoi_filename.replace('_aoi.', '_prediction.')\n",
+    "        \n",
+    "pred_tif_path = detector.raster_prediction(in_raster_path=raster_path,\n",
+    "                                            out_raster_path=out_raster,\n",
+    "                                            aoi_path=aoi_filename,\n",
+    "                                            conf_thresh=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polygons = detector.process_raster_predictions(pred_tif_path,\n",
+    "                                                shapes_path=out_geom,\n",
+    "                                                aoi_path=aoi_filename, \n",
+    "                                                conf_thresh=0.25)\n",
+    "polygons = gpd.GeoDataFrame(polygons)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    polys = filter_polygons(polygons, filters)\n",
+    "except Exception as e:\n",
+    "    print(e, '\\n', 'fixing geometries...')\n",
+    "    filters['geometry'] = filters.buffer(0)\n",
+    "    polys = filter_polygons(polygons, filters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\"geometry\": polys.geometry}).reset_index()\n",
+    "df[\"id\"] = pd.Series(map(lambda x: f\"{origin_name}_{tile.tileID}_{x}\", df.index.values))\n",
+    "df[\"tileID\"] = tile.tileID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_df = pd.concat([result_df, df])\n",
+    "gdf = process_polygons(result_df, filters.crs)\n",
+    "gdf.head(3)"
    ]
   },
   {
@@ -560,6 +634,23 @@
     "    json.dump(geoms, f)\n",
     "os.rename(save_path, save_path[:-5])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.system(f'rm -rf {out_raster}')\n",
+    "os.system(f'rm -rf {aoi_filename}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -578,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
