Cleaned up notebook, added file deletion handling

--- a/data/notebooks/pbdnn/PBDNN_inference.ipynb
+++ b/data/notebooks/pbdnn/PBDNN_inference.ipynb
@@ -25,6 +25,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import json\n",
     "import time\n",
     "import cv2\n",
     "import rasterio\n",
@@ -41,16 +42,18 @@
     "from skimage import measure\n",
     "from scipy.ndimage import rotate\n",
     "from rasterio.features import rasterize, shapes\n",
+    "from rasterio.merge import merge\n",
     "from shapely.geometry import Polygon, shape, LinearRing\n",
     "import shapely.wkt\n",
     "from pathlib import Path\n",
     "from datetime import datetime\n",
     "import yaml\n",
+    "import torch\n",
     "\n",
     "from sentinel2download.downloader import Sentinel2Downloader\n",
     "from sip_plot_boundary_detection_nn.code.preprocessing import (\n",
     "    preprocess_sentinel_raw_data, read_raster, extract_tci)\n",
-    "from sip_plot_boundary_detection_nn.code.engine import *\n",
+    "from sip_plot_boundary_detection_nn.code.engine import make_unet_plusplus\n",
     "from sip_plot_boundary_detection_nn.code.dataset import BoundaryDetector\n",
     "from sip_plot_boundary_detection_nn.code.filter_polygons import filter_polygons\n",
     "\n",
@@ -58,17 +61,8 @@
     "warnings.filterwarnings('ignore')\n",
     "import logging\n",
     "logger = logging.getLogger()\n",
-    "logger.setLevel(logging.INFO)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.cuda as cuda\n",
-    "cuda.empty_cache()"
+    "logger.setLevel(logging.INFO)\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
@@ -203,17 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(BASE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "local = False\n",
-    "#if local:\n",
     "ukr_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/ukr_shapes/custom.geo.json\")\n",
     "if os.path.exists(ukr_shapefile):\n",
     "    usa_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/custom.geo.json\")\n",
@@ -415,7 +399,7 @@
     "    model.load_state_dict(torch.load(\n",
     "        config['model_weights_path'],map_location=torch.device('cpu')))\n",
     "    \n",
-    "print('model loaded')\n",
+    "print('Model loaded successfully')\n",
     "    \n",
     "date_tile_info = get_tiles(aoi_filename, sentinel_tiles_path)\n",
     "loadings = load_images(API_KEY, date_tile_info.tileID.values, START_DATE, END_DATE, LOAD_DIR, PRODUCT_TYPE)\n",
@@ -455,13 +439,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rasterio.merge import merge\n",
-    "\n",
     "def stitch_tiles(paths, out_raster_path='test.tif'):\n",
     "    tiles = []\n",
     "    \n",
-    "    for i, p in enumerate(paths):\n",
-    "        file = rasterio.open(p)\n",
+    "    for i, path in enumerate(paths):\n",
+    "        file = rasterio.open(path)\n",
     "        tiles.append(file)\n",
     "            \n",
     "        \n",
@@ -480,8 +462,8 @@
     "        out_raster_path = out_raster_path.replace('.tif', '_merged.tif')\n",
     "    print(f'saved raster {out_raster_path}')\n",
     "\n",
-    "    for t in tiles:\n",
-    "        t.close()\n",
+    "    for tile in tiles:\n",
+    "        tile.close()\n",
     "        \n",
     "    with rasterio.open(out_raster_path, \"w\", **meta) as dst:\n",
     "        dst.write(tile_arr)\n",
@@ -612,16 +594,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
     "tmp_suffix = \".temp\"\n",
     "gdf['style'] = create_style()\n",
     "save_path = os.path.join(RESULTS_DIR, f\"{REQUEST_ID}_{START_DATE}_{END_DATE}.geojson{tmp_suffix}\")\n",
     "save_polygons(gdf, save_path)\n",
     "\n",
     "try:\n",
-    "    with open(save_path) as f:\n",
-    "        geoms = json.load(f)\n",
+    "    with open(save_path) as file:\n",
+    "        geoms = json.load(file)\n",
     "except Exception:\n",
     "    geoms = {}\n",
     "    \n",
@@ -630,8 +610,8 @@
     "geoms['name'] = 'boundary'\n",
     "geoms['request_id'] = REQUEST_ID\n",
     "\n",
-    "with open(save_path, 'w') as f:\n",
-    "    json.dump(geoms, f)\n",
+    "with open(save_path, 'w') as file:\n",
+    "    json.dump(geoms, file)\n",
     "os.rename(save_path, save_path[:-5])"
    ]
   },
@@ -641,8 +621,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.system(f'rm -rf {out_raster}')\n",
-    "os.system(f'rm -rf {aoi_filename}')"
+    "try:\n",
+    "    os.remove(aoi_filename)\n",
+    "except FileNotFoundError:\n",
+    "    print('No helping geojson files were generated')"
    ]
   },
   {
@@ -650,7 +632,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "try:\n",
+    "    os.remove(out_raster)\n",
+    "except FileNotFoundError:\n",
+    "    print('No helping raster files were generated')"
+   ]
   }
  ],
  "metadata": {
