14775. Change name Soybean corn map

--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "USER = os.getenv('NB_USER')\n",
-    "NAME = 'croptype'"
+    "NAME = 'Soybean corn map'"
    ]
   },
   {
