14778: rename plot boundaries name

--- a/data/notebooks/pbdnn/PBDNN_inference.ipynb
+++ b/data/notebooks/pbdnn/PBDNN_inference.ipynb
@@ -607,7 +607,7 @@
     "    \n",
     "geoms['end_date'] = END_DATE\n",
     "geoms['start_date'] = START_DATE\n",
-    "geoms['name'] = 'boundary'\n",
+    "geoms['name'] = \"Fields' boundaries\"\n",
     "geoms['request_id'] = REQUEST_ID\n",
     "\n",
     "with open(save_path, 'w') as file:\n",
