Fixed raster bands filtering

--- a/data/notebooks/pbdnn/PBDNN_inference.ipynb
+++ b/data/notebooks/pbdnn/PBDNN_inference.ipynb
@@ -493,7 +493,7 @@
     "        print(ex)\n",
     "        continue\n",
     "        \n",
-    "    full_tile = [os.path.join(tile_folder, x) for x in os.listdir(tile_folder) if x.endswith('.jp2')]\n",
+    "    full_tile = [os.path.join(tile_folder, filename) for filename in os.listdir(tile_folder) if 'TCI_10m.jp2' in filename]\n",
     "    rasters.append(full_tile[0])\n",
     "        \n",
     "print(f'rasters to be processed: {rasters}')"
