14802. Use request_id when running pipeline as additional identifier to prevent problems when running multiple notebooks

--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -28,7 +28,7 @@
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
     "sys.path.append(\"code/\")\n",
     "from code.prediction_pipeline.run import run"
    ]
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "CONFIG_PATH = f\"/home/{USER}/work/notebooks/pw/code/prediction_pipeline/config.yml\"\n",
-    "prediction_file = run(CONFIG_PATH, aoi_filename, start_date, end_date)\n",
+    "prediction_file = run(CONFIG_PATH, aoi_filename, start_date, end_date, REQUEST_ID)\n",
     "os.remove(aoi_filename)"
    ]
   },
