Implemented a bugfix (proper jp2 to tif conversion)

--- a/data/notebooks/pbdnn/PBDNN_inference.ipynb
+++ b/data/notebooks/pbdnn/PBDNN_inference.ipynb
@@ -638,6 +638,18 @@
     "except FileNotFoundError:\n",
     "    print('No helping raster files were generated')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    os.remove(pred_tif_path)\n",
+    "except FileNotFoundError:\n",
+    "    print('No helping prediction raster found, skipping')"
+   ]
   }
  ],
  "metadata": {
