Bug fix handling empty filters

--- a/data/notebooks/pbdnn/PBDNN_inference.ipynb
+++ b/data/notebooks/pbdnn/PBDNN_inference.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "AOI = 'POLYGON ((30.2759366834769 48.51505083641415, 30.61727452548106 48.45927941996875, 30.64285389693346 48.5330821966183, 30.30277405680401 48.58843427910546, 30.2759366834769 48.51505083641415))'\n",
     "START_DATE = \"2020-05-01\"\n",
-    "END_DATE = \"2020-06-30\""
+    "END_DATE = \"2020-06-30\"\n",
+    "\n",
+    "REQUEST_ID = '6'"
    ]
   },
   {
@@ -171,11 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "NB_USER = os.getenv('NB_USER')\n",
@@ -551,12 +549,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    polys = filter_polygons(polygons, filters)\n",
-    "except Exception as e:\n",
-    "    print(e, '\\n', 'fixing geometries...')\n",
-    "    filters['geometry'] = filters.buffer(0)\n",
-    "    polys = filter_polygons(polygons, filters)"
+    "if len(filters) != 0:\n",
+    "    try:\n",
+    "        polys = filter_polygons(polygons, filters)\n",
+    "    except Exception as e:\n",
+    "        print(e, '\\n', 'fixing geometries...')\n",
+    "        filters['geometry'] = filters.buffer(0)\n",
+    "        polys = filter_polygons(polygons, filters)\n",
+    "else:\n",
+    "    print('Non-agricultural data is not found for a given AOI, proceeding without filtering')\n",
+    "    polys = polygons"
    ]
   },
   {
