15135 Deployed updated model and relevant updates to submodule

--- a/data/notebooks/pbdnn/PBDNN_inference.ipynb
+++ b/data/notebooks/pbdnn/PBDNN_inference.ipynb
@@ -55,7 +55,7 @@
     "from sentinel2download.downloader import Sentinel2Downloader\n",
     "from sip_plot_boundary_detection_nn.code.preprocessing import (\n",
     "    preprocess_sentinel_raw_data, read_raster, extract_tci)\n",
-    "from sip_plot_boundary_detection_nn.code.engine import make_unet_plusplus\n",
+    "from sip_plot_boundary_detection_nn.code.engine import load_model, val_tfs\n",
     "from sip_plot_boundary_detection_nn.code.dataset import BoundaryDetector\n",
     "from sip_plot_boundary_detection_nn.code.filter_polygons import filter_polygons\n",
     "\n",
@@ -381,21 +381,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = make_unet_plusplus()\n",
     "config['device'] = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
     "if local:\n",
-    "    config['model_weights_path'] = os.path.join(\n",
-    "        BASE, 'data/notebooks/pbdnn/sip_plot_boundary_detection_nn/models/chkpt_UnetPlusPlus_imagenet_200_new_dataset_v3.pt')\n",
+    "    model_path = os.path.join(\n",
+    "        BASE, 'data/notebooks/pbdnn/sip_plot_boundary_detection_nn/models/UnetPlusPlus_imagenet_30_denmark_filtered.pth')\n",
     "else:\n",
-    "    config['model_weights_path'] = os.path.join(\n",
-    "        BASE, 'notebooks/pbdnn/sip_plot_boundary_detection_nn/models/chkpt_UnetPlusPlus_imagenet_200_new_dataset_v3.pt')\n",
+    "    model_path = os.path.join(\n",
+    "        BASE, 'notebooks/pbdnn/sip_plot_boundary_detection_nn/models/UnetPlusPlus_imagenet_30_denmark_filtered.pth')\n",
     "\n",
-    "if config['device'] == 'cuda':\n",
-    "    model.load_state_dict(torch.load(config['model_weights_path']))\n",
-    "else:\n",
-    "    model.load_state_dict(torch.load(\n",
-    "        config['model_weights_path'],map_location=torch.device('cpu')))\n",
+    "model = load_model(config['model'].lower(), model_path, config['device'])\n",
     "    \n",
     "print('Model loaded successfully')\n",
     "    \n",
