15166 Improved selection of rasters for prediction

--- a/data/notebooks/pbdnn/PBDNN_inference.ipynb
+++ b/data/notebooks/pbdnn/PBDNN_inference.ipynb
@@ -185,7 +185,7 @@
     "PBD_DIR = os.path.join(BASE, \"notebooks/pbdnn\")\n",
     "\n",
     "BANDS = {'TCI'}\n",
-    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 15.0, 'CLOUDY_PIXEL_PERCENTAGE': 15.0, }\n",
+    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 15.0, 'CLOUDY_PIXEL_PERCENTAGE': 5.0, }\n",
     "PRODUCT_TYPE = 'L2A'"
    ]
   },
@@ -309,28 +309,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_date(loadings):\n",
-    "    def _find_last_date(folders):        \n",
-    "        dates = list()\n",
-    "        for folder in folders:\n",
-    "            search = re.search(r\"_(\\d+)T\\d+_\", str(folder))\n",
-    "            date = search.group(1)\n",
-    "            date = datetime.strptime(date, '%Y%m%d')\n",
-    "            dates.append(date)    \n",
-    "        last_date = max(dates)\n",
-    "        last_date = datetime.strftime(last_date, '%Y%m%d')\n",
-    "        return last_date\n",
-    "    \n",
+    "regex = r'\\<CLOUDY_PIXEL_PERCENTAGE\\>[0-9]*\\.?[0-9]*</CLOUDY_PIXEL_PERCENTAGE>'\n",
+    "\n",
+    "def get_min_clouds(loadings, max_ptc=5):\n",
     "    filtered = dict()\n",
+    "    min_ptc = max_ptc\n",
+    "    \n",
     "    for tile, folders in loadings.items():\n",
-    "        \n",
-    "        try:\n",
-    "            last_date = _find_last_date(folders)\n",
-    "            for folder in folders:\n",
-    "                if last_date in folder:\n",
-    "                    filtered[tile] = folder\n",
-    "        except Exception as ex:\n",
-    "            pass\n",
+    "        filtered_folders = set()\n",
+    "        for folder in folders:\n",
+    "            for file in os.listdir(folder):\n",
+    "                \n",
+    "                if \"MTD_TL.xml\" in file:\n",
+    "                    \n",
+    "                    with open(os.path.join(folder, file)) as f:\n",
+    "                        ptc = f.read()\n",
+    "                        ptc = re.search(regex, ptc)\n",
+    "                        \n",
+    "                        if ptc is not None:\n",
+    "                            ptc = ''.join([x for x in ptc.group(0) if x.isdigit() or x=='.'])\n",
+    "                            # print(ptc)\n",
+    "                            filtered_folders.add((ptc, folder))\n",
+    "    \n",
+    "        filtered[tile] = sorted(filtered_folders)[0][1]\n",
+    "\n",
     "    return filtered"
    ]
   },
@@ -397,8 +399,9 @@
     "date_tile_info = get_tiles(aoi_filename, sentinel_tiles_path)\n",
     "loadings = load_images(API_KEY, date_tile_info.tileID.values, START_DATE, END_DATE, LOAD_DIR, PRODUCT_TYPE)\n",
     "checked = check_nodata(loadings, PRODUCT_TYPE)\n",
-    "filtered = filter_date(checked)\n",
-    "    \n",
+    "\n",
+    "checked = get_min_clouds(checked)\n",
+    "\n",
     "origin_name = os.path.basename(aoi_filename).replace(\".geojson\", \"\")\n",
     "\n",
     "print(f'total tiles: {len(loadings)}')\n",
@@ -480,8 +483,8 @@
     "rasters = []\n",
     "for i, tile in date_tile_info.iterrows():\n",
     "    try:\n",
-    "        tile_folder = Path(filtered[tile.tileID])\n",
-    "        print(f'filtered: {tile_folder}')\n",
+    "        tile_folder = Path(checked[tile.tileID])\n",
+    "        print(f'checked: {tile_folder}')\n",
     "    except Exception as ex:\n",
     "        print(ex)\n",
     "        continue\n",
@@ -588,7 +591,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-14T07:33:11.813667Z",
+     "iopub.status.busy": "2021-04-14T07:33:11.813347Z",
+     "iopub.status.idle": "2021-04-14T07:33:11.819019Z",
+     "shell.execute_reply": "2021-04-14T07:33:11.818743Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tmp_suffix = \".temp\"\n",
@@ -615,7 +625,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-14T07:33:11.820922Z",
+     "iopub.status.busy": "2021-04-14T07:33:11.820609Z",
+     "iopub.status.idle": "2021-04-14T07:33:11.823326Z",
+     "shell.execute_reply": "2021-04-14T07:33:11.823002Z"
+    }
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -627,7 +644,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-14T07:33:11.825303Z",
+     "iopub.status.busy": "2021-04-14T07:33:11.824989Z",
+     "iopub.status.idle": "2021-04-14T07:33:11.830533Z",
+     "shell.execute_reply": "2021-04-14T07:33:11.830210Z"
+    }
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -639,7 +663,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-14T07:33:11.832557Z",
+     "iopub.status.busy": "2021-04-14T07:33:11.832246Z",
+     "iopub.status.idle": "2021-04-14T07:33:11.837465Z",
+     "shell.execute_reply": "2021-04-14T07:33:11.837739Z"
+    }
+   },
    "outputs": [],
    "source": [
     "try:\n",
